[tool.poetry]
name = "pams-environments"
version = "0.1.0"
description = ""
authors = ["ryuji-hashimoto0110"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, <3.13"
numpy = "^1.26.1"
torch = "^2.1.0"
pams = "^0.2.0"
pandas = "^2.1.2"
matplotlib = "^3.8.1"
opencv-python = "^4.8.1.78"
gym = "^0.26.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
