[tool.poetry]
name = "pamsenvs"
version = "0.1.0"
description = ""
authors = ["ryuji-hashimoto0110"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, <3.13"
numpy = "^1.26.1"
pams = "^0.2.0"
pandas = "^2.1.2"
matplotlib = "^3.8.1"
opencv-python = "^4.8.1.78"
pot = "^0.9.3"
rich = "^13.7.0"
torch = "^2.2.1"
torchvision = "^0.17.1"
pickleshare = "^0.7.5"
tqdm = "^4.66.4"
pettingzoo = "^1.24.3"
seaborn = "^0.13.2"
tslearn = "^0.6.3"
transformers = "4.49.0"
statsmodels = "^0.14.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
